--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: any
   
 
   # The following adds the Cupertino Icons font to your application.
@@ -73,11 +76,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts: 
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts: 
+    - family: Dana
+      fonts:
+        - asset: assets/fonts/Dana-Regular.ttf
+        - asset: assets/fonts/Dana-Bold.ttf
+        - asset: assets/fonts/Dana-ExtraBold.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
